testing/framework/resources/Advanced/Failing/mondrian/query842.e
HQ	HeadQuarters	\N	\N	f	1 Alameda Way
